--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hook-form": "^4.10.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
     "react-transition-group": "^4.3.0"
